--- a/ArjunaJTS/recovery/pom.xml
+++ b/ArjunaJTS/recovery/pom.xml
@@ -45,10 +45,17 @@
       <artifactId>jboss-logging</artifactId>
       <version>3.1.0.GA</version>
     </dependency>
+        <!-- OPEN JDK ORB only dependencies -->
     <dependency>
-      <groupId>org.jacorb</groupId>
-      <artifactId>jacorb</artifactId>
-      <version>2.3.1.jbossorg-1</version>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>narayana-jts-idlj</artifactId>
+      <version>${version.narayana}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.openjdk-orb</groupId>
+      <artifactId>openjdk-orb</artifactId>
+      <version>8.1.9.Final</version>
+      <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -113,7 +120,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
-             <version>1.6</version>
+             <version>3.1.0</version>
              <executions>
                <execution>
                  <phase>integration-test</phase>
