--- a/rts/lra-examples/cdi-participant/pom.xml
+++ b/rts/lra-examples/cdi-participant/pom.xml
@@ -109,7 +109,16 @@
 
        <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-resteasy</artifactId>
+            <artifactId>quarkus-resteasy-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client-jackson</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.rts</groupId>
+          <artifactId>lra-service-base</artifactId>
+          <version>${project.version}</version>
         </dependency>
     </dependencies>
     <profiles>
