--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -55,30 +55,14 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-          <groupId>org.jboss.resteasy</groupId>
-          <artifactId>resteasy-jaxrs</artifactId>
-          <version>3.0.16.Final</version>
-        </dependency>
-        <dependency>
             <groupId>org.jboss.narayana.arjunacore</groupId>
             <artifactId>arjunacore</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jboss.logging</groupId>
-            <artifactId>jboss-logging</artifactId>
-            <version>${version.jboss.logging}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-servlet</artifactId>
-            <version>${undertow.io.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.undertow</groupId>
-            <artifactId>undertow-core</artifactId>
-            <version>${undertow.io.version}</version>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-core-spi</artifactId>
+            <version>${version.resteasy}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
@@ -90,6 +74,22 @@
     <build>
         <defaultGoal>package</defaultGoal>
         <plugins>
+	          <plugin>
+		          <groupId>org.codehaus.mojo</groupId>
+		          <artifactId>exec-maven-plugin</artifactId>
+		          <executions>
+		            <execution>
+			            <id>Run Quickstart</id>
+			            <phase>integration-test</phase>
+			            <goals>
+			                <goal>java</goal>
+			            </goals>
+		              <configuration>
+		                <mainClass>org.jboss.narayana.rts.TxnTest</mainClass>
+		              </configuration>
+		            </execution>
+		          </executions>
+	          </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
