--- a/rts/lra-examples/lra-jwt/wildfly/client/pom.xml
+++ b/rts/lra-examples/lra-jwt/wildfly/client/pom.xml
@@ -17,17 +17,9 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
-            <version>${version.resteasy.client}</version>
+            <version>${version.resteasy}</version>
             <scope>compile</scope>
             <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.spec.javax.ws.rs</groupId>
-                    <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.jboss.spec.javax.xml.bind</groupId>
-                    <artifactId>jboss-jaxb-api_2.3_spec</artifactId>
-                </exclusion>
                 <exclusion>
                     <groupId>org.jboss.spec.javax.annotation</groupId>
                     <artifactId>jboss-annotations-api_1.3_spec</artifactId>
@@ -50,7 +42,7 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jackson2-provider</artifactId>
-            <version>${version.resteasy.client}</version>
+            <version>${version.resteasy}</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -74,13 +66,6 @@
                     <artifactId>jakarta.activation</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxrs</artifactId>
-            <version>${version.resteasy.jaxrs}</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
