JBTM-3588 use jakarta dependencies - also disable XTS (which Manuel will look into) and osgi (I can't find jakarta support) and LRA (use commit ead7de415b65c0073df7075b8549ec249bd3bb49)

--- a/at/util/pom.xml
+++ b/at/util/pom.xml
@@ -58,6 +58,17 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>${version.jakarta.xml.bind.jakarta-xml-bind-api}</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.ws.rs</groupId>
+      <artifactId>jakarta.ws.rs-api</artifactId>
+      <version>${version.jakarta.ws.rs.jakarta-ws-rs-api}</version>
+    </dependency>
+
     <!-- jboss logging -->
     <dependency>
       <groupId>org.jboss.logging</groupId>
